--- a/Projeto_imoveis.ipynb
+++ b/Projeto_imoveis.ipynb
@@ -11,7 +11,7 @@
         "v8sEWyKcuLTG",
         "1AUkBEUJ3zHM"
       ],
-      "authorship_tag": "ABX9TyMPK81/OBUIA6oU1FSBVhzC",
+      "authorship_tag": "ABX9TyMSUmG0fRvE8NXrfIaku+wP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<h1 style=\"font-size: 28px;\">Mapeando preços de alugéis com o uso da Random Forest</h1>\n",
+        "<h1 style=\"font-size: 28px;\">Mapeando preços de aluguéis com o uso da Random Forest</h1>\n",
         "\n"
       ],
       "metadata": {
